src/ir/parser.py
import ply.yacc as yacc
import sys
from tokrules import tokens

from SymbolTable import SymbolTable
from SymbolTable import SymbolTableLitEntry as LitEntry
from SymbolTable import SymbolTableVariableEntry as VarEntry
from SymbolTable import SymbolTableInterfaceEntry as InterfaceEntry
from SymbolTable import SymbolTableStructEntry as StructEntry
from SymbolTable import SymbolTableFunctionEntry as FuncEntry
from SymbolTable import SymbolTableImportEntry as ImportEntry

from SymbolTable import ActivationRecord
from utils import symTableToCSV
from code_optimization import code_optimization

symTableDict = {'rootSymTable': SymbolTable(None, 'rootSymTable')}
symTableSt = ['rootSymTable']
actRecordDict = {'root': ActivationRecord('root')}
actRecordSt = ['root']
counter = 0
label_counter = 0

beglabel = ''
endlabel = ''
def newVar():
	global counter
	res = '_t' + str(counter)
	counter += 1
	return res

def newLabel():
	global label_counter
	res = '_label' + str(label_counter)
	label_counter += 1
	return res

def verifyCalType(name, lineno):
	flag = False
	for n in symTableSt[::-1]:
		if name in symTableDict[n].symbols:
			flag = True
			table = symTableDict[n]
			break
	if not flag:
		print('Type of', name, 'not found on line number', lineno)
		return 'Unknown'
	entry = table.get(name)
	return entry.getType()

def flatten_list(l):
	output = []
	for i in l:
		if type(i) == list:
			flatten_list(i)
		else:
			output.append(i)
	return output
def p_empty(p):
	'empty :'
	pass

def p_keyword_lcurly(p):
	'''
	keyword_lcurly : LCURLY
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	key = "sym#" + str(p.lexer.lineno) + "#" + str(p.lexer.lexpos)
	symtab = SymbolTable(symTableDict[symTableSt[-1]], key)
	symTableDict[key] = symtab
	symTableSt += [key]
	actRecord = ActivationRecord(key)
	actRecordDict[key] = actRecord
	actRecordSt += [actRecord.getName()]

def p_keyword_rcurly(p):
	'''
	keyword_rcurly : RCURLY
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	sym_table = symTableDict[symTableSt[-1]]
	act_record = actRecordDict[actRecordSt[-1]]
	act_record.setLocalVarsInputArgs(sym_table)
	symTableSt = symTableSt[:-1]
	actRecordSt = actRecordSt[:-1]

def p_source_file(p):
	'''
	SourceFile  : PackageClause ImportDeclList TopLevelDeclList
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	for record_name in actRecordDict:
	  if (record_name == "root"):
	    continue
	  actRecordDict[record_name].setGlobalVars(actRecordDict["root"].getGlobalVars())
	  actRecordDict[record_name].setConstVars(actRecordDict["root"].getConstVars())
	p[0]['dict_code'] = p[3]['dict_code']
	print(symTableDict)
	for key in symTableDict:
	    symTableDict[key].prettyPrint()
	print()
	for key in actRecordDict:
	    actRecordDict[key].prettyPrint()
	print()
	p[0]['activationRecords'] = actRecordDict
	for key in p[0]['dict_code']:
	  print(key + ":")
	  for code in p[0]['dict_code'][key]:
	    print(code)
	  print()

def p_package_clause(p):
	'''
	PackageClause  : PACKAGE IDENTIFIER
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_import_decl_list(p):
	'''
	ImportDeclList : ImportDecl ImportDeclList
	               | empty
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_import_decl(p):
	'''
	ImportDecl    : IMPORT ImportSpecTopList
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_import_spec_top_list(p):
	'''
	ImportSpecTopList : ImportSpec
	                  | LPAREN ImportSpecList RPAREN
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_import_spec_list(p):
	'''
	ImportSpecList : ImportSpec ImportSpecList
	               | empty
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_import_spec(p):
	'''
	ImportSpec       :  ImportSpecInit ImportPath
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_import_spec_init(p):
	'''
	ImportSpecInit : DOT
	               | IDENTIFIER
	               | empty
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_import_path(p):
	'''
	ImportPath     : STRINGLIT
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	name = p[1].replace('"', '')
	entry = ImportEntry(name)
	if (symTable.put(entry) == False):
	     print("Error:", name, "redeclared on line number", p.lexer.lineno)
	     sys.exit(0)

def p_top_level_decl_list(p):
	'''
	TopLevelDeclList : TopLevelDecl TopLevelDeclList
	                 | empty
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	if len(p)==3 and p.slice[2].type=="TopLevelDeclList" and p.slice[1].type=="TopLevelDecl":
		#p[0]['dict_code'].update(p[1]['dict_code'])
		#p[0]['dict_code'].update(p[2]['dict_code'])
		final_dict_code = {}
		for key in p[1]['dict_code']:
		  if key in p[2]['dict_code']:
		    final_dict_code[key] = p[1]['dict_code'][key] + p[2]['dict_code'][key]
		  else:
		    final_dict_code[key] = p[1]['dict_code'][key]
		for key in p[2]['dict_code']:
		  if not key in p[1]['dict_code']:
		    final_dict_code[key] = p[2]['dict_code'][key]
		p[0]['dict_code'] = final_dict_code
	if len(p)==2 and p.slice[1].type=="empty":
		sym_table = symTableDict[symTableSt[-1]]
		act_record = actRecordDict[actRecordSt[-1]]
		act_record.setLocalVarsInputArgs(sym_table)
		act_record.setGlobalVars(act_record.getLocalVars())

def p_top_level_decl(p):
	'''
	TopLevelDecl  : Declaration
	              | FunctionDecl
	              | MethodDecl
	              | InterfaceDecl
	              | IFuncDef
	              | StructDef
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	p[0]['dict_code'] = {}
	if len(p)==2 and p.slice[1].type=="Declaration":
		p[0]['dict_code']['global_decl'] = code_optimization(p[1]['global_decl'])
		p[0]['dict_code']['const_decl'] = code_optimization(p[1]['const_decl'])
	if len(p)==2 and p.slice[1].type=="FunctionDecl":
		p[0]['dict_code'].update(p[1]['dict_code'])
	if len(p)==2 and p.slice[1].type=="MethodDecl":
		p[0]['dict_code'].update(p[1]['dict_code'])

def p_struct_def(p):
	'''
	StructDef : TYPE IDENTIFIER STRUCT keyword_lcurly ParameterDeclList2 keyword_rcurly
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	struc = StructEntry(p[2])
	struc.addFields(p[5]['fields'])
	struc.setSize()
	if (symTable.put(struc) == False):
	     print("Error:", p[2], "redeclared on line number", p.lexer.lineno)
	     sys.exit(0)

def p_parameter_decl_list2(p):
	'''
	ParameterDeclList2  : ParameterDecl2 ParameterDeclList2
	                    | empty
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	if len(p)==3 and p.slice[2].type=="ParameterDeclList2" and p.slice[1].type=="ParameterDecl2":
		p[0]['fields'] = p[1]['fields']
		p[0]['fields'].update(p[2]['fields'])
	if len(p)==2 and p.slice[1].type=="empty":
		p[0]['fields'] = {}

def p_parameter_decl2(p):
	'''
	ParameterDecl2  : IdentifierList1 Type
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	if len(p)==3 and p.slice[2].type=="Type" and p.slice[1].type=="IdentifierList1":
		p[0]['fields'] = {}
		for id in p[1]['idlist']:
		  p[0]['fields'][id] = p[2]['type']

def p_interface_decl(p):
	'''
	InterfaceDecl : TYPE IDENTIFIER INTERFACE interfaceBlock
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	interfc = InterfaceEntry(p[2])
	if (symTable.put(interfc) == False):
	    print("Error:", p[2], "redeclared on line number", p.lexer.lineno)
	    sys.exit(0)

def p_interface_block(p):
	'''
	interfaceBlock  : keyword_lcurly IFuncDecList keyword_rcurly
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_i_func_dec_list(p):
	'''
	IFuncDecList   : IFuncDec IFuncDecList
	               | empty
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_i_func_dec(p):
	'''
	IFuncDec      : IDENTIFIER LPAREN RPAREN Type
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	fn = FuncEntry(p[1])
	if (symTable.put(fn) == False):
	    print("Error:", p[1], "redeclared on line number", p.lexer.lineno)
	    sys.exit(0)

def p_i_func_def(p):
	'''
	IFuncDef      : FUNC LPAREN IDENTIFIER IDENTIFIER RPAREN IFuncDec Block
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}

def p_block(p):
	'''
	Block : keyword_lcurly StatementList keyword_rcurly
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	p[0]['code'] = p[2]['code']
	p[0]['ret_typelist'] = p[2]['ret_typelist']

def p_statement_list(p):
	'''
	StatementList : Statement StatementList
	              | empty
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	p[0]['ret_typelist'] = []
	if len(p)==3 and p.slice[2].type=="StatementList" and p.slice[1].type=="Statement":
		p[0]['code'] = p[1]['code'] + p[2]['code']
		p[0]['ret_typelist'] = [p[1]['typelist']] + p[2]['ret_typelist']

def p_statement(p):
	'''
	Statement : Declaration
	          | SimpleStmt
	          | ReturnStmt
	          | Block
	          | IfStmt
	          | SwitchStmt
	          | ForStmt
	          | FuncCallStmt
	          | GoFunc
	          | BreakStmt
	          | ContinueStmt
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	p[0]['code'] = p[1]['code']
	p[0]['typelist'] = []
	if len(p)==2 and p.slice[1].type=="ReturnStmt":
		p[0]['typelist'] = p[1]['typelist']
	if len(p)==2 and p.slice[1].type=="Block":
		for typ in p[1]['ret_typelist']:
		    p[0]['typelist'] += typ
	if len(p)==2 and p.slice[1].type=="IfStmt":
		for typ in p[1]['ret_typelist']:
		    p[0]['typelist'] += typ
	if len(p)==2 and p.slice[1].type=="SwitchStmt":
		for typ in p[1]['ret_typelist']:
		    p[0]['typelist'] += typ
	if len(p)==2 and p.slice[1].type=="FuncCallStmt":
		actRecordSt = actRecordSt[:-1]

def p_continue_stmt(p):
	'''
	ContinueStmt : CONTINUE
	             | CONTINUE IDENTIFIER
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	if len(p)==2 and p.slice[1].type=="CONTINUE":
		p[0]['code'] = ["goto beglabel"]
	if len(p)==3 and p.slice[2].type=="IDENTIFIER" and p.slice[1].type=="CONTINUE":
		p[0]['code'] = ["goto " + p[2]]

def p_break_stmt(p):
	'''
	BreakStmt : BREAK
	'''
	global symTableSt
	global symTableDict
	global actRecordSt
	global actRecordDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dict_code'] = {}
	p[0]['code'] = ["goto endlabel"]
